feat: all swagger paths
