# priv/static/swagger.json
@@ -6,9 +6,61 @@
   "host": "localhost:4000",
   "definitions": {},
   "paths": {
+    "/v1/auth/forgot_password": {
+      "post": {
+        "description": "Sends password reset instructions to the user.",
+        "operationId": "forgot_password",
+        "parameters": [
+          {
+            "description": "User email",
+            "in": "query",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "204": {
+            "description": "No content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "summary": "Request password reset",
+        "tags": [
+          "Authentication"
+        ]
+      }
+    },
+    "/v1/auth/me": {
+      "get": {
+        "description": "Returns the user in the current session.",
+        "operationId": "me",
+        "parameters": [],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "User returned succesfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "summary": "User in the current session",
+        "tags": [
+          "Authentication"
+        ]
+      }
+    },
     "/v1/auth/refresh": {
       "post": {
-        "description": "Refresh access token",
+        "description": "Refresh access token with a refresh token cookie.",
         "operationId": "refresh_token",
         "parameters": [],
         "produces": [
@@ -23,6 +75,72 @@
           }
         },
         "summary": "Refresh access token",
+        "tags": [
+          "Authentication"
+        ]
+      }
+    },
+    "/v1/auth/reset_password": {
+      "post": {
+        "description": "Sends a request to reset user's password.",
+        "operationId": "reset_password",
+        "parameters": [
+          {
+            "description": "Access token",
+            "in": "query",
+            "name": "token",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "description": "New password",
+            "in": "query",
+            "name": "password",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "description": "New password confirmation",
+            "in": "query",
+            "name": "password_confirmation",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Password succesfully reset"
+          },
+          "404": {
+            "description": "Invalid or expired reset token"
+          }
+        },
+        "summary": "Reset password",
+        "tags": [
+          "Authentication"
+        ]
+      }
+    },
+    "/v1/auth/sessions": {
+      "get": {
+        "description": "Returns the user sessions.",
+        "operationId": "sessions",
+        "parameters": [],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Sessions succesfully returned"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        },
+        "summary": "User sessions",
         "tags": [
           "Authentication"
         ]
@@ -57,9 +175,37 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Failed to create user session"
           }
         },
-        "summary": "Sigin in a user",
+        "summary": "Sign in a user",
+        "tags": [
+          "Authentication"
+        ]
+      }
+    },
+    "/v1/auth/sign_out": {
+      "post": {
+        "description": "Signs out the user.",
+        "operationId": "sign_out",
+        "parameters": [],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Signed out successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Failed to sign out"
+          }
+        },
+        "summary": "Sign out",
         "tags": [
           "Authentication"
         ]
